loginDialog: Fix vertical misalignment of items in the users list
For each item in the users list there is a vertical box packing exactly
an horizontal box with the user's avatar and name, and a small StBin for
the progress bar used for timed logins. The problem is that this second
actor is always taking up 2px of vertical space regardless of whether such
progress bar is visible or not, causing a permanent vertical misalignment
for the rest of cases, which happen to be the most common.

Fix this, by making sure that the 2px height and margin allocated for that
progress bar is only assigned when actually showing it, not always.

https://phabricator.endlessm.com/T21694

--- a/data/theme/gnome-shell-sass/_endless.scss
+++ b/data/theme/gnome-shell-sass/_endless.scss
@@ -11,6 +11,21 @@
 // is probably the best way forward (e.g. modifying _common.css for $font-family)).
 
 
+// Login dialog
+
+.login-dialog-user-list-item {
+    .login-dialog-timed-login-indicator {
+        // Don't allocate this space in CSS, do it in code instead
+        height: 0px;
+        margin: 0;
+
+        &:showing {
+            height: 2px;
+            margin: 2px 0 0 0;
+        }
+    }
+}
+
 // Lock screen
 
 #lockDialogGroup {
